# the-hell-4-src

./: .gitignore  BUILD.md  CMakeLists.txt  InitProject.bat  README.md  TheHell_4.sln  build.ps1  thehell3.vcxproj  thehell3.vcxproj.filters
Server/: Server.vNext.vcxproj
cmake/: FindDirectDraw.cmake  FindHellfire.cmake  deps.cmake  end.cmake  library.cmake  program.cmake  python.cmake  srcs.cmake  utils.cmake
doc/: Coliseum.txt  DevNotes.txt  Todo_List.txt
lib/: GfxDecode.cpp  SAttrFile.cpp  SCommon.cpp  SCommon.h  SCompression.cpp  SFileCompactArchive.cpp  SFileCreateArchiveEx.cpp  SFileExtractFile.cpp  SFileFindFile.cpp  SFileOpenArchive.cpp  SFileOpenFileEx.cpp  SFileReadFile.cpp  SListFile.cpp  StormLib.h  StormPort.h  TH-Debug.dif  TH.idc  THChangesLog.txt  TH_exe_data_map.txt  TextArrays.xls  debug1920x1200  exp_hell.bat  exp_storm.bat  hell.def  hell_loader.def  storm.def  storm_loader.def  wndmode.ini
lib/bzip2/: bzlib_private.h
lib/huffman/: huff.cpp  huff.h
lib/misc/: md5.cpp  md5.h  misc_crc32.cpp  misc_crc32.h
lib/pklib/: crc32.cpp  explode.cpp  implode.cpp  pklib.h
lib/txt/: 2007-11-07, 11-31, Magma & Lite Demons Double melee attacks-related code.txt  2007-11-07, 12-59, Double Melee Attackers.txt  2007-11-08, 4-37, no drop at death fix try 1.txt  2007-11-08, 6-01, thorns improved.txt  2007-11-08, 7-14, less AP.txt  2007-11-08, 9-29, DATA SEQUENCE (MON, UNI, ITEMS, ETC.).txt  2007-11-09, 11-38, spell support.txt  2007-11-09, 13-15, trap bugfix (hopefully).txt  2007-11-11, 6-38, Lazarus in MP room - shift place (closer to entrance).txt  2007-11-13, 22-26, Chain Activation (CA) of TheDark53.txt  2007-11-21, 11-39, allowing Wyrms to spit poison.txt  2007-12-07, 19-45, Apocalypse Damage Increase.txt  2007-12-10, 16-17, Arcane Star damage increase.txt  2007-12-11, 15-54, Lightning damage increase.txt  2007-12-11, 3-18, Inferno damage increase.txt  2007-12-12, 21-24, Character Maximum Damage Cap.txt  2007-12-14, 21-01, Traps Damage Increase.txt  2007-12-15, 16-22, Lightning Demons' Lightning attack damage increase.txt  2007-12-15, 17-31, Balrogs' Inferno damage increase.txt  2007-12-15, 19-29, Mages' Flash Damage Increase.txt  2007-12-15, 4-04, Hydra Spellbook damage display Fix.txt  2007-12-16, 16-23, Anti-dupe Fix.txt  2007-12-16, 2-28, Burning Cross Code.txt  2007-12-16, 3-52, DLVL Difficulty Modifier Code.txt  (+604 more)
res/: credits.txt  credits1.txt  support.txt  support1.txt  th2dev.mpq
src/: .gitignore  AffixEffects.cpp  Affixes.cpp  AffixesClassic.cpp  AffixesColiseum.cpp  AffixesEnchant.cpp  AffixesRare.cpp  Auras.cpp  BaseItems.cpp  BaseMonster.cpp  BaseObjectsOnMap.cpp  BaseQuests.cpp  BitsBytes.h  BloomShader.hlsl  CMakeLists.txt  CXBOXController.cpp  CXBOXController.h  CastSprites.cpp  CharPanel.cpp  CharSlots.cpp  CodeSave.cpp  Config.cpp  Crafting.cpp  Draw.cpp  Enchanting.cpp  Engine.cpp  Entry.cpp  Error.cpp  FXAAShader.hlsl  File.cpp  FlasksInfo.cpp  FogShader.hlsl  FogVenShader.hlsl  GameChangers.cpp  GameModes.cpp  GenerateMap.cpp  GenerateQuestFloor.cpp  Halls.cpp  Hell.cpp  Help.cpp  (+130 more)
tools/: binpatch.cpp  config.ini  d1util.cpp  defguard.bat  forheaders.bat  guardheaders.bat  version.h
(+24 files in other folders)
